edit:프로젝트 폴더명 변경

--- a/mimidaily/.project
+++ b/mimidaily/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>mimi_daily</name>
+	<name>mimidaily</name>
 	<comment></comment>
 	<projects>
 	</projects>
