--- a/Servers/Tomcat v9.0 Server at localhost-config/web.xml
+++ b/Servers/Tomcat v9.0 Server at localhost-config/web.xml
@@ -4746,5 +4746,13 @@
         <welcome-file>index.htm</welcome-file>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
+    
+    
+   	<resource-ref>
+		<description>Oracle Datasource example</description>
+		<res-ref-name>jdbc/mimidaily</res-ref-name>
+		<res-type>javax.sql.DataSource</res-type>
+		<res-auth>Container</res-auth>
+	</resource-ref>
 
 </web-app>
