--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
 /.metadata/
-Servers/Tomcat v9.0 Server at localhost-config/server.xml
+Servers/Tomcat\ v9.0\ Server\ at\ localhost-config/server.xml
