edit: 오류 메세지 색상 수정

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .metadata/
 Servers/Tomcat v9.0 Server at localhost-config/server.xml
 Servers/Tomcat v9.0 Server at localhost-config/web.xml
+.settings/*
+.classpath
