--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 .metadata/
+.settings/
+Servers/
 Servers/Tomcat v9.0 Server at localhost-config/server.xml
 Servers/Tomcat v9.0 Server at localhost-config/web.xml
+Servers/Tomcat v9.0 Server at localhost-config/context.xml
+mimidaily/.classpath
