--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@ Servers/
 Servers/Tomcat v9.0 Server at localhost-config/server.xml
 Servers/Tomcat v9.0 Server at localhost-config/web.xml
 Servers/Tomcat v9.0 Server at localhost-config/context.xml
-mimidaily/.classpath
+**/.classpath
 **/mimidaily.cld
