--- a/.github/workflows/ci.cd.test.yml
+++ b/.github/workflows/ci.cd.test.yml
@@ -1,47 +1,71 @@
-name: 🚀 Deploy workflow on test environment
+name: Build & Deploy to Test
 
 on:
   push:
-    branches: ['release/v**']
+    branches:
+      - develop
+      - "release/v*"
+  pull_request:
+    branches:
+      - develop
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: ✅ Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: "temurin"
+          java-version: 17
+
+      - name: Build with Maven
+        run: mvn clean package -DskipTests
+
+      - name: Archive artifact
+        run: zip -r app-test.zip target/*.jar
+
   deploy:
+    needs: build
+    if: contains(github.ref, 'release/') || github.ref == 'refs/heads/develop'
+    environment: test
+    runs-on: ubuntu-latest
     env:
       ENV_PATH: .env
       S3_BUCKET_DIR_NAME: test
       DEPLOYMENT_GROUP_NAME: test
-    environment: test
-    runs-on: ubuntu-latest
     steps:
-      - name: ✅ Checkout branch
+      - name: ✅ Checkout code
         uses: actions/checkout@v3
 
-      - name: 🗂️ Make config folder
-        run: mkdir -p config
-
-      - name: ⚙️ Create .env file
+      - name: Create .env file for test
         run: |
-            touch ${{ env.ENV_PATH }}
-            echo DOMAIN_FIR=${{ secrets.DOMAIN_FIR }} >> ${{ env.ENV_PATH }}
-            echo SOCKET_PORT_PROD=${{ secrets.SOCKET_PORT_PROD }} >> ${{ env.ENV_PATH }}
-            echo SOCKET_PORT_TEST=${{ secrets.SOCKET_PORT_TEST }} >> ${{ env.ENV_PATH }}
-      
-      - name: 📦 Zip project files
-         run: zip -r ./$GITHUB_SHA.zip .
+          echo DB_HOST=${{ secrets.DB_HOST_TEST }} >> ${{ env.ENV_PATH }}
+          echo DB_PORT=${{ secrets.DB_PORT_TEST }} >> ${{ env.ENV_PATH }}
+          echo OTHER_SECRET=${{ secrets.OTHER_SECRET_TEST }} >> ${{ env.ENV_PATH }}
 
-      - name: 🌎 Access to AWS
+      - name: Zip code + config
+        run: zip -r deploy-test.zip . -x "**/target/**"
+
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-northeast-2
-          
-      - name: 🚛 Upload to S3
-         run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://${{ secrets.S3_BUCKET_NAME }}/${{ env.S3_BUCKET_DIR_NAME }}/$GITHUB_SHA.zip
-         
-      - name: 🚀 Deploy to EC2 with CodeDeploy
-         run: aws deploy create-deployment
-             --application-name codedeploy-app
-             --deployment-config-name CodeDeployDefault.AllAtOnce
-             --deployment-group-name ${{ env.DEPLOYMENT_GROUP_NAME }}
-             --s3-location bucket=${{ secrets.S3_BUCKET_NAME }},bundleType=zip,key=${{ env.S3_BUCKET_DIR_NAME }}/$GITHUB_SHA.zip
+
+      - name: Upload to S3
+        run: |
+          aws s3 cp deploy-test.zip s3://${{ secrets.S3_BUCKET_NAME }}/${{ env.S3_BUCKET_DIR_NAME }}/deploy-${{ github.sha }}.zip
+
+      - name: Deploy via CodeDeploy
+        run: |
+          aws deploy create-deployment \
+            --application-name MiMiDaily-App \
+            --deployment-config-name CodeDeployDefault.AllAtOnce \
+            --deployment-group-name ${{ env.DEPLOYMENT_GROUP_NAME }} \
+            --s3-location bucket=${{ secrets.S3_BUCKET_NAME }},bundleType=zip,key=${{ env.S3_BUCKET_DIR_NAME }}/deploy-${{ github.sha }}.zip
