--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,30 @@
 services:
-  mimidaily:
-    build:
-      context: .
-      dockerfile: Dockerfile
+  tomcat:
     image: mimidaily:v0.04
-    container_name: mimidaily
-    ports:
-      - "8080:8080"
+    container_name: tomcat
+    expose:
+      - "8080"   # 외부로 열지 않고 내부 네트워크에만
     env_file:
       - .env
     environment:
-      # Tomcat이 META-INF/context.xml에서 ${DB_*}를 치환할 수 있도록 -D로 주입
       CATALINA_OPTS: >-
         -DDB_HOST=${DB_HOST}
         -DDB_NAME=${DB_NAME}
         -DDB_USER=${DB_USER}
         -DDB_PASS=${DB_PASS}
+    networks: [appnet]
+
+  nginx:
+    image: nginx:1.27-alpine
+    container_name: nginx
+    ports:
+      - "80:80"   # 외부는 nginx 80 포트만 노출
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - tomcat
+    networks: [appnet]
+
+networks:
+  appnet:
+    driver: bridge
