--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .metadata/
 .settings/
+./idea
 Servers/
 Servers/Tomcat v9.0 Server at localhost-config/server.xml
 Servers/Tomcat v9.0 Server at localhost-config/web.xml
