--- a/.github/workflows/ci.cd.prod.yml
+++ b/.github/workflows/ci.cd.prod.yml
@@ -47,7 +47,6 @@ jobs:
           echo DB_HOST=${{ secrets.DB_HOST_PROD }} >> ${{ env.ENV_PATH }}
           echo DB_PORT=${{ secrets.DB_PORT_PROD }} >> ${{ env.ENV_PATH }}
           echo OTHER_SECRET=${{ secrets.OTHER_SECRET_PROD }} >> ${{ env.ENV_PATH }}
-          # 필요한 환경변수들 다 추가
 
       - name: Zip code + config
         run: zip -r deploy.zip . -x "**/target/**" # 빌드 산출물 포함하거나 제외할 파일 조정 가능
@@ -66,7 +65,7 @@ jobs:
       - name: Deploy via CodeDeploy
         run: |
           aws deploy create-deployment \
-            --application-name MiMiDaily-App \              # CodeDeploy 애플리케이션 이름
+            --application-name MiMiDaily-App \      
             --deployment-config-name CodeDeployDefault.AllAtOnce \
             --deployment-group-name ${{ env.DEPLOYMENT_GROUP_NAME }} \
             --s3-location bucket=${{ secrets.S3_BUCKET_NAME }},bundleType=zip,key=${{ env.S3_BUCKET_DIR_NAME }}/deploy-${{ github.sha }}.zip
