--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,9 @@ events { worker_connections 1024; }
 
 http {
   upstream tomcat_upstream {
-    server tomcat:8080;  # docker-compose 서비스명:포트
+    # K8s 서비스 이름 사용 (Service를 80->8080 매핑해뒀다면 80으로)
+    server tomcat-backend.app.svc.cluster.local:80;
+    # 또는 짧게: server tomcat-backend:80;
     keepalive 32;
   }
 
@@ -19,7 +21,7 @@ http {
       proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # 헬스체크용
+    # 헬스체크 전용 (프록시 안 탐)
     location /healthz {
       return 200 'ok';
       add_header Content-Type text/plain;
