--- a/Dockerfile.tomcat
+++ b/Dockerfile.tomcat
@@ -16,6 +16,9 @@ RUN curl -fsSL -o /tmp/javax.servlet-api-4.0.1.jar https://repo1.maven.org/maven
 FROM tomcat:9.0-jdk17-temurin
 RUN rm -rf /usr/local/tomcat/webapps/*
 
+RUN apt-get update && apt-get install -y --no-install-recommends gettext-base && rm -rf /var/lib/apt/lists/*
+
+
 # JDBC Driver (if not packaged inside the app)
 ADD https://repo1.maven.org/maven2/com/mysql/mysql-connector-j/8.4.0/mysql-connector-j-8.4.0.jar /usr/local/tomcat/lib/mysql-connector-j.jar
 
@@ -26,4 +29,4 @@ COPY --from=build /app/src/main/webapp/ /usr/local/tomcat/webapps/ROOT/
 COPY --from=build /app/WEB-INF/classes /usr/local/tomcat/webapps/ROOT/WEB-INF/classes
 
 EXPOSE 8080
-CMD ["catalina.sh","run"]
+CMD ["/bin/sh","-c","envsubst < /usr/local/tomcat/webapps/ROOT/META-INF/context.xml > /tmp/context.xml && mv /tmp/context.xml /usr/local/tomcat/webapps/ROOT/META-INF/context.xml && exec catalina.sh run"]
