--- a/.github/workflows/ci.cd.test.yml
+++ b/.github/workflows/ci.cd.test.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: ✅ Checkout code
+      - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Set up JDK 17
