nginx conf 매핑 오류 수정, nginx,ingress health check location 수정

--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -8,7 +8,7 @@ metadata:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/subnets: "subnet-063cf26dbb1821305,subnet-0818a43221784f39e"
-    alb.ingress.kubernetes.io/healthcheck-path: /
+    alb.ingress.kubernetes.io/healthcheck-path: /healthz
     alb.ingress.kubernetes.io/success-codes: "200,302"
 spec:
   ingressClassName: alb
