trigger branch 변경, 오류수정

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -16,8 +16,8 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: write    # kustomization.yaml 커밋
-      id-token: write    # (OIDC 쓰는 경우 필요)
+      contents: write      # kustomization.yaml 커밋에 필요
+      id-token: write      # OIDC 사용할 경우 필요
 
     env:
       AWS_REGION: ${{ secrets.AWS_REGION }}
@@ -30,8 +30,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # --- AWS 자격증명 구성 ---
-      # (B) 액세스 키 방식
+      # --- AWS 자격증명 구성 (액세스 키) ---
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -39,7 +38,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region:            ${{ secrets.AWS_REGION }}
 
-      # (A) OIDC 사용할 때 예시:
+      # (OIDC 사용 시)
       # - name: Configure AWS credentials (OIDC)
       #   uses: aws-actions/configure-aws-credentials@v4
       #   with:
@@ -78,15 +77,21 @@ jobs:
 
       - name: Update kustomize image tags
         run: |
-          yq -i '
-            .images |=
-              map(
-                if .name == env(ECR_NGINX) then . + {newTag: env(IMAGE_TAG)[:7]}
-                else if .name == env(ECR_TOMCAT) then . + {newTag: env(IMAGE_TAG)[:7]}
-                else . end end
-              )
+          # 1) sha7 태그를 셸에서 만들고 환경변수로 노출
+          SHORT_TAG="${IMAGE_TAG::7}"
+          export SHORT_TAG
+
+          echo "ECR_NGINX=${ECR_NGINX}"
+          echo "ECR_TOMCAT=${ECR_TOMCAT}"
+          echo "SHORT_TAG=${SHORT_TAG}"
+
+          # 2) newTag를 각각 갱신 (yq v4 문법)
+          yq eval -i '
+            (.images[] | select(.name == env(ECR_NGINX)).newTag) = env(SHORT_TAG) |
+            (.images[] | select(.name == env(ECR_TOMCAT)).newTag) = env(SHORT_TAG)
           ' k8s/kustomization.yaml
-          echo "==== kustomization.yaml ===="
+
+          echo "==== kustomization.yaml (after) ===="
           cat k8s/kustomization.yaml
 
       - name: Commit & Push manifest bump
@@ -94,5 +99,6 @@ jobs:
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add k8s/kustomization.yaml
-          git commit -m "ci: bump images to nginx=${IMAGE_TAG::7}, tomcat=${IMAGE_TAG::7}" || echo "No changes to commit"
-          git push origin HEAD:main
+          git commit -m "ci: bump images to ${IMAGE_TAG::7}" || echo "No changes to commit"
+          # 현재 워크플로 트리거 브랜치로 바로 푸시
+          git push origin HEAD:${GITHUB_REF_NAME}
