nginx conf 매핑 오류 수정, nginx,ingress health check location 수정

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -2,7 +2,7 @@ name: CI/CD (ECR + ArgoCD)
 
 on:
   push:
-    branches: [ "jaeyeol-container" ]
+    branches: [ "main" ]
     paths:
       - "Dockerfile.nginx"
       - "Dockerfile.tomcat"
