--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,12 @@
-worker_processes auto;
+worker_processes  auto;
+
 events { worker_connections 1024; }
 
 http {
+  sendfile on;
+
   upstream tomcat_upstream {
-    # K8s 서비스 이름 사용 (Service를 80->8080 매핑해뒀다면 80으로)
     server tomcat-backend.app.svc.cluster.local:8080;
-    # 또는 짧게: server tomcat-backend:80;
     keepalive 32;
   }
 
@@ -15,16 +16,15 @@ http {
 
     location / {
       proxy_pass http://tomcat_upstream;
+      proxy_http_version 1.1;
+      proxy_set_header Connection "";
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # 헬스체크 전용 (프록시 안 탐)
-    location /healthz {
-      return 200 'ok';
-      add_header Content-Type text/plain;
-    }
+    # 헬스체크
+    location = /healthz { access_log off; default_type text/plain; return 200 "ok\n"; }
   }
 }
