nginx Canary 포기 서비스 문제

--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -2,8 +2,7 @@
 resources:
   - app-bootstrap.yaml
   - tomcat-rollout.yaml
-  - nginx-rollout.yaml
-  - nginx-svc.yaml
+  - nginx.yaml
   - ingress.yaml
 images:
   - name: 857305036087.dkr.ecr.ap-northeast-2.amazonaws.com/ecr_nginx
