--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -20,7 +20,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: nginx-frontend-stable
+                name: nginx-frontend
                 port:
                   number: 80
     - host: www.mimidaily.shop
@@ -30,6 +30,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: nginx-frontend-stable
+                name: nginx-frontend
                 port:
                   number: 80
