--- a/k8s/tomcat-rollout.yaml
+++ b/k8s/tomcat-rollout.yaml
@@ -19,6 +19,13 @@ spec:
           image: 857305036087.dkr.ecr.ap-northeast-2.amazonaws.com/ecr_tomcat:v0.10
           ports:
             - containerPort: 8080
+          resources:
+            requests:
+              cpu: 100m
+              memory: 128Mi
+            limits:
+              cpu: 500m
+              memory: 512Mi
           envFrom:
             - secretRef: { name: db-secret }
             - configMapRef: { name: s3-config }
