--- a/k8s/tomcat-rollout.yaml
+++ b/k8s/tomcat-rollout.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: tomcat-backend
     spec:
+      serviceAccountName: app-backend-sa
       containers:
         - name: tomcat
           image: 857305036087.dkr.ecr.ap-northeast-2.amazonaws.com/ecr_tomcat:v0.10
