--- a/mimidaily/src/main/webapp/WEB-INF/web.xml
+++ b/mimidaily/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
-         version="5.0">
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
+         version="4.0">
 
     <!-- Session Configuration -->
     <session-config>
@@ -11,7 +11,7 @@
             <name>JSESSIONID</name>
             <path>/</path>
             <http-only>true</http-only>
-            <secure>false</secure> <!-- HTTPS 사용 시 true로 변경 -->
+            <secure>true</secure> <!-- HTTPS 사용 시 true로 변경, TLS 종료가 ALB에서 이루어진 경우에도 true로 유지 -->
             <max-age>3600</max-age> <!-- 1시간 -->
         </cookie-config>
         <tracking-mode>COOKIE</tracking-mode>
@@ -27,21 +27,34 @@
         <param-value>${AWS_S3_REGION}</param-value>
     </context-param>
     <context-param>
-        <param-name>aws.accessKeyId</param-name>
-        <param-value>${AWS_ACCESS_KEY_ID}</param-value>
-    </context-param>
-    <context-param>
-        <param-name>aws.secretAccessKey</param-name>
-        <param-value>${AWS_SECRET_ACCESS_KEY}</param-value>
-    </context-param>
-    <context-param>
-        <param-name>aws.sessionToken</param-name>
-        <param-value>${AWS_SESSION_TOKEN}</param-value>
-    </context-param>
-    <context-param>
         <param-name>aws.s3.publicUrl</param-name>
         <param-value>${AWS_S3_PUBLIC_URL}</param-value>
     </context-param>
+
+    <filter>
+        <filter-name>CharacterEncodingFilter</filter-name>
+        <filter-class>org.apache.catalina.filters.SetCharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+        <init-param>
+            <param-name>ignore</param-name>
+            <param-value>false</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>CharacterEncodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <jsp-config>
+        <jsp-property-group>
+            <url-pattern>*.jsp</url-pattern>
+            <page-encoding>UTF-8</page-encoding>
+            <scripting-invalid>false</scripting-invalid>
+        </jsp-property-group>
+    </jsp-config>
 
     <!-- JNDI DataSource 참조 선언 (이 이름이 코드/컨텍스트와 반드시 일치) -->
     <resource-ref>
@@ -50,6 +63,10 @@
         <res-type>javax.sql.DataSource</res-type>
         <res-auth>Container</res-auth>
     </resource-ref>
+
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
 
     <!-- 필요 시 서블릿/필터 매핑 추가 -->
 </web-app>
