--- a/k8s/tomcat-svc.yaml
+++ b/k8s/tomcat-svc.yaml
@@ -10,3 +10,7 @@ spec:
     - name: http
       port: 8080
       targetPort: 8080
+  sessionAffinity: ClientIP
+  sessionAffinityConfig:
+    clientIP:
+      timeoutSeconds: 3600
